# ness

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test-suite.yml
ness/: __init__.py  cli.py  datalake.py
scripts/: lint.sh  test.sh
tests/: conftest.py  test_cli.py  test_ness.py
tests/data/table.csv/: part-00000-4cca5077-c527-48a5-bd8d-bee240aa7b12-c000.csv
