[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ness"
version = "0.1.5"
description = "A Python datalake client."
license = "MIT"
authors = ["Dani <dani@postpay.io>"]
readme = "README.md"
include = ["LICENSE", "README.md"]
keywords = ["ness", "datalake", "s3", "pandas"]

homepage = "https://github.com/postpayio/ness"
repository = "https://github.com/postpayio/ness"

packages = [
    { include = "ness" },
]

classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Typing :: Typed",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = ">= 0.18.1"
click = ">= 8.0.0"

[tool.poetry.dev-dependencies]
black = "*"
codecov = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pyarrow = "*"
pytest = "*"
pytest-cov = "*"
types-setuptools = "*"

[tool.poetry.scripts]
ness = "ness.cli:main"

[tool.black]
extend-exclude = '''
/(
  | .htmlcov
  | .mypy_cache
  | dist
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["ness"]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
